Added additional note to the directions, which explains the program's output

--- a/index.html
+++ b/index.html
@@ -168,7 +168,9 @@
         <u>Step 1</u>: Use the leftmost dropdown to select the brand, form, and concentration of insulin desired. <br />
         <u>Step 2:</u> Use the dropdown in the middle to select the desired supply. <br />
         <u>Step 3:</u> Use the text box on the right to enter the desired units per day, and then press tab (pressing enter will reset the calculator). <br />
-        <b>NOTE: Information will appear as soon as a change is made to the default values below!</b>
+        <b>NOTE 1: Information will appear as soon as a change is made to the default values below! <br />
+            NOTE 2: The two numbers outputted by the program differ, because insulin may not be orderable in the exact size required by a patient!
+            Thus, the "to order" number rounds the amount of insulin required up to nearest orderable amount.</b>
     </p>
 
     <form>
