Added new insulin types, added yml file for CI/CD testing

--- a/index.html
+++ b/index.html
@@ -31,32 +31,49 @@
             <option id="opt2", value=2>Admelog, Vial, U-100</option>
             <option id="opt3", value=1>Apidra, Pen, U-100</option>
             <option id="opt4", value=2>Apidra, Vial, U-100</option>
-            <option id="opt5", value=1>Basaglar, Pen, U-100</option>
-            <option id="opt6", value=1>Fiasp, Pen, U-100</option>
-            <option id="opt7", value=2>Fiasp, Vial, U-100</option>
-            <option id="opt8", value=1>Humalog, Pen, U-100</option>
-            <option id="opt9", value=5>Humalog, Pen, U-200</option>
-            <option id="opt10", value=2>Humalog, Vial, U-100</option>
-            <option id="opt11", value=1>Lantus, Pen, U-100</option>
-            <option id="opt12", value=2>Lantus, Vial, U-100</option>
-            <option id="opt13", value=1>Levemir, Pen, U-100</option>
-            <option id="opt14", value=2>Levemir, Vial, U-100</option>
-            <option id="opt15", value=1>Lispro, Pen, U-100</option>
-            <option id="opt16", value=2>Lispro, Vial, U-100</option>
-            <option id="opt17", value=1>Lyumjev, Pen, U-100</option>
-            <option id="opt18", value=5>Lyumjev, Pen, U-200</option>
-            <option id="opt19", value=2>Lyumjev, Vial, U-100</option>
-            <option id="opt20", value=1>Novolog, Pen, U-100</option>
-            <option id="opt21", value=2>Novolog, Vial, U-100</option>
-            <option id="opt22", value=1>Semglee, Pen, U-100</option>
-            <option id="opt23", value=2>Semglee, Vial, U-100</option>
-            <option id="opt24", value=3>Toujeo, Pen, U-300</option>
-            <option id="opt25", value=4>Toujeo Max, Pen, U-300</option>
-            <option id="opt26", value=1>Tresiba, Pen, U-100</option>
-            <option id="opt27", value=8>Tresiba, Pen, U-200</option>
-            <option id="opt28", value=2>Tresiba, Vial, U-100</option>
-            <option id="opt29", value=7>U-500, Pen</option>
-            <option id="opt30", value=6>U-500, Vial</option>
+            <option id="opt5", value=1>Aspart, Pen, U-100</option>
+            <option id="opt6", value=2>Aspart, Vial, U-100</option>
+            <option id="opt7", value=1>Basaglar, Pen, U-100</option>
+            <option id="opt8", value=1>Fiasp, Pen, U-100</option>
+            <option id="opt9", value=2>Fiasp, Vial, U-100</option>
+            <option id="opt10", value=1>Glargine, Pen, U-100</option>
+            <option id="opt11", value=1>Humalog, Pen, U-100</option>
+            <option id="opt12", value=5>Humalog, Pen, U-200</option>
+            <option id="opt13", value=2>Humalog, Vial, U-100</option>
+            <option id="opt14", value=1>Humalog 75/25, Pen, U-100</option>
+            <option id="opt15", value=2>Humalog 75/25, Vial, U-100</option>
+            <option id="opt16", value=1>Humulin 70/30, Pen, U-100</option>
+            <option id="opt17", value=2>Humulin 70/30, Vial, U-100</option>
+            <option id="opt18", value=1>Humulin N, Pen, U-100</option>
+            <option id="opt19", value=2>Humulin N, Vial, U-100</option>
+            <option id="opt20", value=1>Humulin R, Pen, U-100</option>
+            <option id="opt21", value=2>Humulin R, Vial, U-100</option>
+            <option id="opt22", value=1>Lantus, Pen, U-100</option>
+            <option id="opt23", value=2>Lantus, Vial, U-100</option>
+            <option id="opt24", value=1>Levemir, Pen, U-100</option>
+            <option id="opt25", value=2>Levemir, Vial, U-100</option>
+            <option id="opt26", value=1>Lispro, Pen, U-100</option>
+            <option id="opt27", value=2>Lispro, Vial, U-100</option>
+            <option id="opt28", value=1>Lyumjev, Pen, U-100</option>
+            <option id="opt29", value=5>Lyumjev, Pen, U-200</option>
+            <option id="opt30", value=2>Lyumjev, Vial, U-100</option>
+            <option id="opt31", value=1>Novolin 70/30, Pen, U-100</option>
+            <option id="opt32", value=2>Novolin 70/30, Vial, U-100</option>
+            <option id="opt33", value=1>Novolin N, Pen, U-100</option>
+            <option id="opt34", value=2>Novolin N, Vial, U-100</option>
+            <option id="opt35", value=2>Novolin R, Vial, U-100</option>
+            <option id="opt36", value=1>Novolog, Pen, U-100</option>
+            <option id="opt37", value=2>Novolog, Vial, U-100</option>
+            <option id="opt38", value=1>Rezvoglar, Pen, U-100</option>
+            <option id="opt39", value=1>Semglee, Pen, U-100</option>
+            <option id="opt40", value=2>Semglee, Vial, U-100</option>
+            <option id="opt41", value=3>Toujeo, Pen, U-300</option>
+            <option id="opt42", value=4>Toujeo Max, Pen, U-300</option>
+            <option id="opt43", value=1>Tresiba, Pen, U-100</option>
+            <option id="opt44", value=8>Tresiba, Pen, U-200</option>
+            <option id="opt45", value=2>Tresiba, Vial, U-100</option>
+            <option id="opt46", value=7>U-500, Pen</option>
+            <option id="opt47", value=6>U-500, Vial</option>
         </select>
 
         <select id="num_days" onchange="calculate()">
